[package]
name = "related_posts_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
aws-config = "0.56.1"
aws-sdk-bedrockruntime = "0.30.0"
tokio = { version = "1.28.1", features = ["full"] }
ndarray = "0.15.6"
futures = "0.3.28"
